--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1 class="logo">AMENTI</h1>
             <p class="tagline">The market is a system. The system can be engineered.</p>
             <p class="status">Real-time price & supply data for Ethiopia's agricultural backbone is being indexed.</p>
-            <p class="contact">For partnership inquiries, contact: [Your new amenti.operations.hq@gmail.com or similar address]</p>
+            <p class="contact">For partnership inquiries, contact: esromwoldtensaie@gmail.com</p>
         </div>
     </div>
 </body>
